--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -1,13 +1,15 @@
+<app-navbar></app-navbar>
+
 <!-- Header Section -->
 <header class="text-white text-center py-5">
     <div class="container about-us-content">
-        <h1 class="display-4">About Us</h1>
+        <h1 class="display-4">A propos</h1>
         <p class="lead">Chez PlantBuddy, nous sommes passionnés par les plantes et la nature. Notre objectif est
             d'offrir une expérience d'achat en ligne unique, où les utilisateurs peuvent trouver une variété de plantes
             soigneusement sélectionnées, accompagnées de conseils pour leur entretien. Rejoignez notre communauté et
             embellissez votre espace avec nos magnifiques plantes!</p>
         <button class="button" (click)="onContactUs()">
-            <span>Contact Us!</span>
+            <span>Contactez nous !</span>
         </button>
 
     </div>
@@ -17,7 +19,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-7 col-md-6 entreDuGauche">
-                <h2>Who We Are</h2>
+                <h2>Qui sommes nous</h2>
                 <p>
                     Nous sommes un <strong>site de vente en ligne</strong> dédié à la vente de plantes de qualité. Chez
                     PlantBuddy, nous croyons en la puissance des plantes pour améliorer nos espaces de vie et notre
@@ -45,7 +47,7 @@
     <!--our devaloppers -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Our Team</h2>
+            <h2 class="text-center mb-5">Notre équipe</h2>
             <div class="row mt-4">
                 <!------------------------------------------------------------------------------------------------------------------------>
                 <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center align-items-center">
@@ -87,11 +89,11 @@
                 <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center align-items-center">
                     <div class="card card-dev">
                         <div class="card-photo">
-                            <img src="logo.jpg" class="img-fluid rounded" alt="Our Team"
+                            <img src="taswirti.jpg" class="img-fluid rounded" alt="Our Team"
                                 style="border: 2px solid #323232;">
                         </div>
                         <div class="card-title mt-4">Sara Kalai<br>
-                            <span>Fullstack dev &amp; UX UI</span>
+                            <span>Étudiante en 2ème année de développement système informatique</span>
                         </div>
                         <div class="card-socials">
                             <button class="card-socials-btn facebook">
@@ -130,7 +132,7 @@
     <section class="activities py-5 mt-4 mb-5">
         <div class="container">
             <div class="text-white text-center mb-5">
-                <h2>What We Do</h2>
+                <h2>Qu'est ce qu'on propose</h2>
                 <p class="lead">Découvrez nos activités qui rendent PlantBuddy unique.</p>
             </div>
             <div class="row text-center">
