--- a/src/app/compnents/error/error.component.html
+++ b/src/app/compnents/error/error.component.html
@@ -1,4 +1,6 @@
+
+<app-navbar></app-navbar>
 <div>
-    <button class="btnBack" (click)="goHome()"><i class="animation"></i>back to home page<i class="animation"></i>
+    <button class="btnBack" (click)="goHome()"><i class="animation"></i>Page d'accueil<i class="animation"></i>
     </button>
 </div>
