--- a/src/app/compnents/list-plants-admin/list-plants-admin.component.html
+++ b/src/app/compnents/list-plants-admin/list-plants-admin.component.html
@@ -1,3 +1,4 @@
+<app-navbar-admin></app-navbar-admin>
 <div class="text-center welcome py-5 text-white">
     <div class="welcome-content">
         <h1 class="display-4 mb-5">Catalogue des Plantes</h1>
@@ -29,9 +30,7 @@
     </div>
    
 </div>
-<a [routerLink]="['/addPlant']" >
-    <button class="add-btn">Ajouter une Plante</button>
-</a>
+ 
 
 <!-- afficher selon catégorie-->
 <!--Plantes fleuries-->
