--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -1,9 +1,11 @@
+<app-navbar></app-navbar>
+
 <a routerLink="/wishlist" title="Wishlist">
 <div class="svg-wrapper">
   <svg height="60" width="190" xmlns="http://www.w3.org/2000/svg">
     <rect class="shape" height="60" width="190"></rect>
     </svg>
-    <div class="text">wishlist</div>
+    <div class="text">Coup de coeur</div>
 </div>
 </a> 
 <!---------------->
@@ -54,7 +56,7 @@
             </div>
 
             <!-- Price Filter -->
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <div class="input-group mb-3">
                     <div class="range">
                         <div class="sliderValue">
@@ -67,7 +69,7 @@
                         </div>
                     </div>
                 </div>  
-            </div>
+            </div> -->
             
         </div>
     </div>
