--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -1,23 +1,23 @@
 <div class="klo">
     <ul>
-        <li><strong>Personality :</strong> {{plant.personality}}</li>
+        <li><strong>Personalité :</strong> {{plant.personality}}</li>
         <li><strong>Description :</strong> {{plant.description}}</li>
         <li><strong>Maintenance :</strong> {{plant.entretien}}</li>
         <li><strong>Fun Filter :</strong> {{plant.fun_filter}}</li>
-        <li><strong>Price :</strong> {{plant.price}} €</li>
+        <li><strong>Prix :</strong> {{plant.price}} €</li>
         <button class="save-btn" (click)="onHidePrix()">Modifier le prix</button>
         <div [hidden]="hidePrix">
             <input type="text" placeholder="Tapez le prix" class="modif-form" #prix>
             <button class="save-btn" (click)="onSavePrix(prix.value)">Enregistrer</button>
         </div>
-        <li><strong>In Stock :</strong> {{plant.stock}} pieces</li>
+        <li><strong>En Stock :</strong> {{plant.stock}} pieces</li>
         <button class="save-btn" (click)="onHideStock()">Modifier le stock</button>
         <div [hidden]="hideStock">
             <input type="text" placeholder="Tapez le stock" class="modif-form" #stock>
             <button class="save-btn" (click)="onSaveStock(stock.value)">Enregistrer</button>
         </div>
-        <li><strong>Date Added :</strong> {{plant.date_ajout}}</li>
-        <li><strong>Lifespan :</strong> {{plant.dureeVie}}</li>
+        <li><strong>Date d'ajout :</strong> {{plant.date_ajout}}</li>
+        <li><strong>Durée de vie :</strong> {{plant.dureeVie}}</li>
         <li>
             <ul><strong>Arrosage</strong>
             @for(w of plant.arrosage;track $index){
