--- a/src/app/compnents/quiz/quiz.component.html
+++ b/src/app/compnents/quiz/quiz.component.html
@@ -86,7 +86,7 @@
             </div>
         </div>
 
-        <button type="button">Show Result</button>
+        <button type="button">Résultat</button>
     </form>
     <p id="result"></p>
 </div>
