--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -3,24 +3,25 @@
         <div class="row">
             <!-- About Us -->
             <div class="col-md-3">
-                <h5>About Us</h5>
-                <p style="color: #B9F1C3;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
+                <h5>A propos</h5>
+                <p style="color: #B9F1C3;"> Nous proposons une large sélection de plantes d'intérieur et d'extérieur, soigneusement
+                    choisies pour leur qualité et leur beauté.</p>
             </div>
 
             <!-- Quick Links -->
             <div class="col-md-3">
-                <h5>Quick Links</h5>
+                <h5>Liens rapides</h5>
                 <ul class="list-unstyled">
-                    <li><a routerLink="/home" style="color: #B9F1C3;">Home</a></li>
+                    <li><a routerLink="/home" style="color: #B9F1C3;">Accueil</a></li>
                     <li><a routerLink="/listePlantes" style="color: #B9F1C3;">Catalogue des Plantes</a></li>
-                    <li><a routerLink="/aboutUs" style="color: #B9F1C3;">About Us</a></li>
-                    <li><a routerLink="/contactUs" style="color: #B9F1C3;">Contact Us</a></li>
+                    <li><a routerLink="/aboutUs" style="color: #B9F1C3;">A propos</a></li>
+                    <li><a routerLink="/contactUs" style="color: #B9F1C3;">Nous contacter</a></li>
                 </ul>
             </div>
 
             <!-- Social Media & Subscription -->
             <div class="col-md-3">
-                <h5>Follow Us</h5>
+                <h5>Suivez nous</h5>
                 <div class="social-icons mb-2">
                     <a href="#" class="me-2"><i class="bi bi-facebook" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
                     <a href="#" class="me-2"><i class="bi bi-instagram" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
@@ -30,7 +31,7 @@
             </div>
 
             <div class="col-md-3">
-                <h5>Our Location</h5>
+                <h5>Localisation</h5>
                 <iframe class="w-100 rounded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                     src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=isetch+(isetCh)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
                         href="https://www.gps.ie/">
