--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -1,9 +1,11 @@
+<app-navbar></app-navbar>
+
 <div class="row align-items-center py-5 m-4">
 
     <div class="col-lg-4 contact-details">
         <img src="login.png" alt="Login Image" />
-        <h2>Login</h2>
-        <p>Log in to access your account.</p>
+        <h2>Se connecter</h2>
+        <p>Connectez vous à votre compte administrateur</p>
     </div>
 
     <div class="col-lg-8 contact-form">
