--- a/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
+++ b/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
@@ -11,7 +11,7 @@
                         <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">{{com.nom}}</span>
                     </div>
                     <div>
-                        <button class="btn" style="background-color: red; color: #fff;" title="delete" (click)="onDelete($index)">Delete</button>
+                        <button class="btn" style="background-color: red; color: #fff;" title="delete" (click)="onDelete($index)">Effacer</button>
                         <span class="text3">{{com.nbLikes}}</span>
                         <button class="like" ><i class="bi bi-emoji-heart-eyes"></i></button>
                     </div>
