--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -1,9 +1,9 @@
 <div class="container justify-content-center">
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Your Name" #name
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Nom" #name
             class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Add a Comment" #comment
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="Commentaire" #comment
             class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-end btn-add"> <button class="btn" (click)="onAddComment(name.value,comment.value)">Add Comment</button> </div>
+    <div class="d-flex justify-content-end btn-add"> <button class="btn" (click)="onAddComment(name.value,comment.value)">Ajouter</button> </div>
         <!--------------------------------------------------------> 
     <div class="mb-5 mt-2">  
         @for(com of tabcom;track $index){
