--- a/src/app/compnents/plant-item-admin/plant-item-admin.component.html
+++ b/src/app/compnents/plant-item-admin/plant-item-admin.component.html
@@ -5,7 +5,6 @@
         <div class="d-flex justify-content-between align-items-center">
 
             <span class="discount" [ngClass]="{'c1': plant.in_stock, 'c2': !plant.in_stock}">{{plant.in_stock ? 'In stock' : 'Out of stock'}}</span>
-            <button class="wishlist" title="Add to wishlist"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
         </div>
     </div>
 
@@ -23,9 +22,8 @@
         <li class="list-group-item" style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
     </ul>
     <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-        <button class="btn" style="background-color: #1C593A; color: #fff;" title="Add to cart">Add to cart</button>
-        <button class="btn" style="background-color: red; color: #fff;" title="delete" (click)="onDelete(plant.id)">Delete</button>
-        <a [routerLink]="['/plantAdmin', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">View</button></a>
+        <button class="btn" style="background-color: red; color: #fff;" title="delete" (click)="onDelete(plant.id)">Supprimer</button>
+        <a [routerLink]="['/plantAdmin', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">Voir plus</button></a>
         </div>
     </div>
 </div>
