--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -28,8 +28,8 @@
         <li class="list-group-item" style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
     </ul>
     <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-        <button class="btn" style="background-color: #1C593A; color: #fff;" (click)="addToCart(plant)" title="Add to cart">Add to cart</button>
-        <a [routerLink]="['/plant', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">View</button></a>
+        <button class="btn" style="background-color: #1C593A; color: #fff;" (click)="addToCart(plant)" title="Add to cart">Ajouter au panier</button>
+        <a [routerLink]="['/plant', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">Voir plus</button></a>
         </div>
     </div>
 </div>
