--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -82,7 +82,7 @@
 <div class="d-flex justify-content-center row row-cols-1 row-cols-md-4" style="width: 100%;">
     <!-- Fleurs -->
     <div class="col">
-        <a href="listePlantes#plant-fleuries">
+        <a routerLink="/listePlantes">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -92,7 +92,7 @@
     </div>
     <!-- Cactus -->
     <div class="col">
-        <a href="listePlantes#plant-cactus">
+        <a routerLink="/listePlantes">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -102,7 +102,7 @@
     </div>
     <!-- Air -->
     <div class="col">
-        <a href="listePlantes#plant-purificatrices">
+        <a routerLink="/listePlantes">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
