quiz done & update 8

--- a/src/app/compnents/contact-us/contact-us.component.html
+++ b/src/app/compnents/contact-us/contact-us.component.html
@@ -1,5 +1,4 @@
        
-       <app-navbar></app-navbar>
        <div class="row align-items-center py-5 m-4">
 
             <div class="col-lg-4 contact-details">
@@ -28,7 +27,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="message" class="form-label">Message:</label>
-                        <textarea [(ngModel)]="message" class="form-control" name="message" rows="4" required></textarea>
+                        <textarea [(ngModel)]="message" class="form-control" name="message" rows="4" placeholder="Votre message" required></textarea>
                     </div>
                     <button type="submit" class="submit-btn">Envoyer<i class="bi bi-send-plus" style="margin-left: 10px;"></i></button>
                 </form>
