--- a/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
+++ b/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
@@ -34,11 +34,11 @@
     <!-- Footer --> 
     <div class="footer d-flex flex-column mt-5">
         <div class="row r4">
-            <div class="col-md-2 myt des">
-                <a [routerLink]="['descriptionAdmin']" routerLinkActive="active">Description</a>
+            <div class="col-md-2">
+                <a [routerLink]="['descriptionAdmin']" routerLinkActive="active" title="Description">Description</a>
             </div>
-            <div class="col-md-2 myt">
-                <a [routerLink]="['commentsAdmin']" routerLinkActive="active">Commentaires</a>
+            <div class="col-md-2">
+                <a [routerLink]="['commentsAdmin']" routerLinkActive="active" title="Commentaires">Commentaires</a>
             </div>
             
             
