--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -1,5 +1,3 @@
-<app-navbar></app-navbar>
-
 <div class="text-center welcome py-5 text-white">
     <div class="welcome-content">
         <h1 class="display-4">Bienvenue chez PlantBuddy</h1>
@@ -15,6 +13,7 @@
 <!-- New Products -->
 <h2 class="text-center mt-5">Nouveaux produits</h2>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <!-- Carousel Indicators -->
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active bg-dark"
             aria-current="true" aria-label="Slide 1"></button>
@@ -24,53 +23,38 @@
             aria-label="Slide 3"></button>
     </div>
 
+    <!-- Carousel Items -->
     <div class="carousel-inner">
-
         <div class="carousel-item active" data-bs-interval="4000">
-            <a href="listePlantes#plant-fleuries">
-                <img src="first.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <a [routerLink]="['/plant', 46]">
+                <img src="first.gif" class="d-block w-100" style="height: 350px;" alt="First slide image">
             </a>
-            <!-- <div class="carousel-caption d-none d-md-block text-dark">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div> -->
         </div>
-
 
         <div class="carousel-item" data-bs-interval="4000">
-            <a href="listePlantes#plant-cactus">
-                <img src="second.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <a [routerLink]="['/plant', 5]">
+                <img src="second.gif" class="d-block w-100" style="height: 350px;" alt="Second slide image">
             </a>
-            <!-- <div class="carousel-caption d-none d-md-block text-dark">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div> -->
         </div>
-
 
         <div class="carousel-item" data-bs-interval="4000">
-            <a href="listePlantes#plant-purificatrices">
-                <img src="third.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <a [routerLink]="['/plant', 23]">
+                <img src="third.gif" class="d-block w-100" style="height: 350px;" alt="Third slide image">
             </a>
-            <!-- <div class="carousel-caption d-none d-md-block text-dark">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div> -->
         </div>
-
     </div>
 
-    <!-- <button class="carousel-control-prev buttonCarousel" type="button" data-bs-target="#carouselExampleFade"
-        data-bs-slide="prev">
+    <!-- Carousel Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next buttonCarousel" type="button" data-bs-target="#carouselExampleFade"
-        data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-    </button> -->
+    </button>
 </div>
+
 <button class="button mt-3 mb-5 mx-auto d-block w-50" (click)="onShowAllPlants()">
     <span>Voir tout le catalogue</span>
 </button>
