--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -1,10 +1,15 @@
 <div class="container justify-content-center">
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Nom" #name
-            class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="Commentaire" #comment
-            class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-end btn-add"> <button class="btn" (click)="onAddComment(name.value,comment.value)">Ajouter</button> </div>
-        <!--------------------------------------------------------> 
+    <div class="d-flex justify-content-center pt-5 pb-2"> 
+        <input type="text" name="text" placeholder="Votre nom +" #name class="form-control addtxt">
+    </div>
+    <div class="d-flex justify-content-center pt-3 pb-2"> 
+        <input type="text" name="text" placeholder="Votre commentaire +" #comment class="form-control addtxt"> 
+    </div>
+    <div class="d-flex justify-content-end btn-add">
+         <button class="btn" (click)="onAddComment(name.value,comment.value)">Ajouter</button> 
+    </div>
+
+        <!------------------------liste des commentaires--------------------------------> 
     <div class="mb-5 mt-2">  
         @for(com of tabcom;track $index){
             <div class="d-flex justify-content-center py-2">
