--- a/src/app/compnents/plant-detail-admin/plant-detail-admin.component.css
+++ b/src/app/compnents/plant-detail-admin/plant-detail-admin.component.css
@@ -75,9 +75,15 @@ img{
     letter-spacing: 1px;
 }
 
-.col-md-2.mio {
-    font-size: 12px;
-    padding-top: 7px
+.col-md-2 {
+    font-size: 16px;
+    padding-top: 7px;
+}
+
+.col-md-2 a:hover {
+    color: #1C593A !important;
+    border-bottom: 5px solid #1C593A;
+    border-radius: 5px;
 }
 
 
