--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.css
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.css
@@ -1,36 +1,70 @@
-
-li {
-    list-style: none;
-    line-height: 50px;
+.plant-card {
+    background-color: #1C593A; 
+    border-radius: 10px;
+    box-shadow: 0 0 15px #1C593A;
+    border: 2px solid #5B8F6D;
+    padding: 16px;
+    margin: 16px 0;
 }
 
-strong{
-    color: #1C593A;
-    font-size: 20px;
-    letter-spacing: 1px;
+.plant-info, .plant-details, .plant-watering {
+    margin-bottom: 16px;
+}
+
+.plant-info h2, .plant-details h3, .plant-watering h3 {
+    color: #f9bc60;
+    font-weight: bold;
     text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 25px;
 }
+
+.tab {
+    width: 100%;
+    margin-top: 8px;
+    cursor: pointer;
+    background-color: #B9F1C3;
+    border: 3px solid #629A74;
+}
+strong{
+    color: #6BAE86;
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+p{
+    color: #A2DAAF;
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
 
 .save-btn {
-    background-color: #1C593A;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 1px solid #1C593A;
+    background-color: #B9F1C3;
+    color: #1C593A  ;
+    border-radius: 10px;
+    border: 3px solid #629A74;
     font-size: 16px;
     cursor: pointer;
     width: 150px;
     letter-spacing: 1px;
     margin: 5px;
-
+    padding: 5px;
+    font-weight: bold;
 }
 .save-btn:hover {
     background-color: #79BA91; 
     color: #1C593A; 
-    border: 1px solid #1C593A;
+    border: 3px solid #629A74;
 }
 .modif-form {
-    background-color: #97d0a9; 
-    border-radius: 0 8px 8px 0;
-    box-shadow: 0 0 15px #1C593A;
-    
+    text-align: center;
+    font-size: 16px;
+    background-color: #B9F1C3;
+    border: 3px solid #629A74;
+    width: 150px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 20px;
 }
