--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -1,29 +1,51 @@
-<div class="klo">
-    <ul>
-        <li><strong>Personalité :</strong> {{plant.personality}}</li>
-        <li><strong>Description :</strong> {{plant.description}}</li>
-        <li><strong>Maintenance :</strong> {{plant.entretien}}</li>
-        <li><strong>Fun Filter :</strong> {{plant.fun_filter}}</li>
-        <li><strong>Prix :</strong> {{plant.price}} €</li>
+<!--  -->
+
+<div class="plant-card">
+    <div class="plant-info">
+        <h2>Informations sur la plante</h2>
+        <p><strong>Personnalité :</strong> {{plant.personality}}</p>
+        <p><strong>Description :</strong> {{plant.description}}</p>
+        <p><strong>Maintenance :</strong> {{plant.entretien}}</p>
+        <p><strong>Fun Filter :</strong> {{plant.fun_filter}}</p>
+    </div>
+
+    <div class="plant-details">
+        <h3>Détails</h3>
+        <p><strong>Prix :</strong> {{plant.price}} €</p>
         <button class="save-btn" (click)="onHidePrix()">Modifier le prix</button>
         <div [hidden]="hidePrix">
             <input type="text" placeholder="Tapez le prix" class="modif-form" #prix>
             <button class="save-btn" (click)="onSavePrix(prix.value)">Enregistrer</button>
         </div>
-        <li><strong>En Stock :</strong> {{plant.stock}} pieces</li>
+        <p><strong>En Stock :</strong> {{plant.stock}} pièces</p>
         <button class="save-btn" (click)="onHideStock()">Modifier le stock</button>
         <div [hidden]="hideStock">
             <input type="text" placeholder="Tapez le stock" class="modif-form" #stock>
             <button class="save-btn" (click)="onSaveStock(stock.value)">Enregistrer</button>
         </div>
-        <li><strong>Date d'ajout :</strong> {{plant.date_ajout}}</li>
-        <li><strong>Durée de vie :</strong> {{plant.dureeVie}}</li>
-        <li>
-            <ul><strong>Arrosage</strong>
-            @for(w of plant.arrosage;track $index){
-                
-                    <li>Saison:{{w.saison}} fréquence:{{w.frequence}} quantitée:{{w.quantite}}</li>
-            }</ul>
-        </li>
-    </ul>
+        <p><strong>Date d'ajout :</strong> {{plant.date_ajout}}</p>
+        <p><strong>Durée de vie :</strong> {{plant.dureeVie}}</p>
+    </div>
+
+    <div class="plant-watering">
+        <h3>Arrosage</h3>
+        <table class="tab table-striped table-bordered table-hover table-sm">
+            <thead>
+                <tr>
+                    <th>Saison</th>
+                    <th>Fréquence</th>
+                    <th>Quantité</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for(w of plant.arrosage;track $index){
+                    <tr>
+                        <td>{{w.saison}}</td>
+                        <td>{{w.frequence}}</td>
+                        <td>{{w.quantite}}</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
