--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -22,7 +22,7 @@
     }
     <!-- Boutons d'action -->
     <div class="text-center mt-3 d-flex justify-content-around">
-        <button class="btn btn-primary" title="Passer à la caisse">Passer au payement</button>
+        <button class="btn btn-primary" routerLink="/passerCommande" title="Passer à la caisse">Passer au payement</button>
         <button class="btn btn-danger" (click)="clearCart()" title="Vider le panier">Tout effacer</button>
     </div>
     }
