--- a/src/app/compnents/list-plants/list-plants.component.css
+++ b/src/app/compnents/list-plants/list-plants.component.css
@@ -118,112 +118,30 @@ a{
 }
 
 /*********************************************/
-.range {
-  box-sizing: border-box;
-  height: 80px;
-  width: 380px;
-  background: #f9bc60;
-  border-radius: 10px;
-  padding: 0 65px 0 45px;
+.search-container {
+  width: 300px;
+  margin: 10px auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.sliderValue {
-  position: relative;
-  width: 100%;
-}
-
-.sliderValue span {
-  position: absolute;
-  height: 45px;
-  width: 45px;
-  transform: translateX(-70%) scale(0);
-  font-weight: 500;
-  top: -40px;
-  line-height: 55px;
-  z-index: 2;
-  color: #fff;
-  transform-origin: bottom;
-  transition: transform 0.3s ease-in-out;
-}
-
-.sliderValue span.show {
-  transform: translateX(-70%) scale(1);
-}
-
-.sliderValue span:after {
-  position: absolute;
-  content: '';
-  height: 100%;
-  width: 100%;
-  background: #664AFF;
-  border: 3px solid #fff;
-  z-index: -1;
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  border-bottom-left-radius: 50%;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
-}
-
-.field {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  position: relative;
-}
-
-.field .value {
-  position: absolute;
-  font-size: 18px;
-  color: #001e1d;
-  font-weight: 600;
-}
-
-.field .value.left {
-  left: -22px;
-}
-
-.field .value.right {
-  right: -43px;
-}
-
-.range input {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 3px;
-  background: #ddd;
-  border-radius: 5px;
-  outline: none;
+.search-input {
   border: none;
-  z-index: 2222;
+  border-radius: 0;
+  padding: 10px;
 }
 
-.range input::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
-  background: red;
-  border-radius: 50%;
-  background: #664AFF;
-  border: 1px solid #664AFF;
-  cursor: pointer;
+.search-button {
+  border-radius: 0;
+  border: none;
+  padding: 10px 15px;
+  background-color: #f9bc60;
+  color: #1C593A;
 }
 
-.range input::-moz-range-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  background: red;
-  border-radius: 50%;
-  background: #664AFF;
-  border: 1px solid #664AFF;
-  cursor: pointer;
+.search-button:hover {
+  background-color: #ce9c50;
 }
 
-.range input::-moz-range-progress {
-  background: #664AFF; 
+.search-input::placeholder {
+  font-style: italic;
 }
