--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -11,12 +11,12 @@
         <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
       </div>
 
-      <div class="d-flex search-container">
-        <input type="text" class="form-control search-input" style="color: #1C593A;" [(ngModel)]="searchTerm" (input)="search()" placeholder="Chercher une plante ...">
+      <!-- <div class="d-flex search-container">
+        <input type="text" class="form-control search-input" style="color: #1C593A;" placeholder="Chercher une plante ...">
         <button class="btn search-button">
           <i class="bi bi-search"></i>
         </button>
-      </div>
+      </div> -->
 
     </div>
   </div>
